--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <h2> This is a project, I had to do for my Web Authoring Class at Rutgers University </h2>
 
-    <p> <a href= "Home.html"> TWP - Main Page </a></p>
+    <p> <a href= "home.html"> TWP - Main Page </a></p>
 
 
-    <img src="Logo.svg" alt="TWP Logo" class="centered-image">
+    <img src="Logo.svg" alt="Logo" class="centered-image">
 
 </body>
 </html>
