--- a/home.html
+++ b/home.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rocketry & Propulsion</title>
+  <title>Theory & Thrust</title>
   <link rel="stylesheet" href="Styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <img src="pics/Logo.svg" alt="Rocketry & Propulsion Logo" style="height: 100px; vertical-align: middle;">
-    <h1>Rocketry & Propulsion</h1>
+    <h1>Theory & Thrust</h1>
     <nav>
       <a href="home.html">Home</a>
       <a href="extras.html">Explore</a>
@@ -38,7 +38,7 @@
   </section>
 
   <section class="intro">
-    <p>Welcome to Rocketry & Propulsion — your launchpad into the science, history, and imagination behind spaceflight. This site will guide visitors through the key technologies that power space exploration, from chemical engines to reusable boosters. Discover exclusive reviews, data-driven galleries, and deep dives into rocket design. What sets this site apart is its mix of visual storytelling, personal insights, and educational content designed to inspire curiosity about propulsion systems and space tech. Stay tuned — this journey is just beginning.</p>
+    <p>Welcome to Theory & Thrust — your launchpad into the science, history, and imagination behind spaceflight. This site will guide visitors through the key technologies that power space exploration, from chemical engines to reusable boosters. Discover exclusive reviews, data-driven galleries, and deep dives into rocket design. What sets this site apart is its mix of visual storytelling, personal insights, and educational content designed to inspire curiosity about propulsion systems and space tech. Stay tuned — this journey is just beginning.</p>
   </section>
 
   <section class="showcase">
@@ -60,7 +60,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 by Rocketry & Propulsion. All rights reserved.</p>
+    <p>&copy; 2025 by Theory & Thrust. All rights reserved.</p>
   </footer>
 </body>
 </html>
