--- a/reviews.html
+++ b/reviews.html
@@ -161,7 +161,7 @@
 
       <!-- Review Card 2 -->
       <div class="review-card">
-        <img src="pics/apollo13.jpg" alt="Apollo 13 Documentary" class="review-img">
+        <img src="pics/Apollo13.jpg" alt="Apollo 13 Documentary" class="review-img">
         <p class="image-credit">Image taken by: Netflix</p>
         <h2>Apollo 13 Documentary (Netflix)</h2>
         <p><strong>Reviewed by:</strong> Vick Maturu</p>
